force-app/main/default/objects/DmlUtilityLogEntry__c/DmlUtilityLogEntry__c.object-meta.xml
<CustomObject>
    <label>DmlUtilityLogEntry</label>
    <nameField>
        <label>DmlUtilityLogEntry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DmlUtilityLogEntries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>