force-app/main/default/objects/DmlUtilityLogEntry__c/fields/DmlUtilityLog__c.field-meta.xml
<CustomField>
    <fullName>DmlUtilityLog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DmlUtilityLog</label>
    <referenceTo>DmlUtilityLog__c</referenceTo>
    <relationshipLabel>DmlUtilityLogEntries</relationshipLabel>
    <relationshipName>DmlUtilityLogEntries</relationshipName>
    <type>Lookup</type>
</CustomField>