force-app/main/default/objects/DmlUtilityLogEntry__c/fields/HookSuppressed__c.field-meta.xml
<CustomField>
    <fullName>HookSuppressed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HookSuppressed</label>
    <type>Checkbox</type>
</CustomField>